Changelog
=========

2.4.2 (unreleased)
------------------

- Nothing changed yet.


2.4.1 (2016-11-07)
------------------

- Prevent mobile customizations from loading when ftw.mobile is not installed.
  [raphael-s]


2.4.0 (2016-10-17)
------------------

- Add ftw.referencewidget and use it instead of plone.formwidget.contenttree.
  [tschanzt]


2.3.0 (2016-10-10)
------------------

- Hide the title of the subsite with CSS.
  [mbaechtold]


2.2.0 (2016-09-26)
------------------

- Fix actionmenu selectors to support structors without definition lists.
  [mathias.leimgruber]

- Reimplement AT=>DX migration with inplace migrator introduced in
  ftw.upgrade 2.0.0. [jone]

- Make ftw.subsite.Subsite linkable in TinyMCE.
  [raphael-s]

- Remove "@@" from simplelayout-view because it is not needed.
  [raphael-s]


2.1.0 (2016-07-20)
------------------

- Lawgiver: change default action group to for adding
  subsites to "add subsites". [jone]


2.0.4 (2016-07-06)
------------------

- Use renamed dependency from ftw.mobile.
  [Kevin Bieri]

- Fix dependency-error if ftw.subsite is installed with ftw.theming but without ftw.mobile.
  Only loads mobilenavigation-specific scss if ftw.mobile and ftw.theming are installed.
  [elioschmutz]


2.0.3 (2016-06-10)
------------------

- Implement ftw.mobile button for subsite languages.
  [mathias.leimgruber]

- Remove invalid aria attributes from section and header tag in languageselector.
  [mathias.leimgruber]


2.0.2 (2016-05-30)
------------------

- Add german translations for "contact-info" view.
  [raphael-s]


2.0.1 (2016-04-11)
------------------

- Make languageselector accessible.
  [Kevin Bieri]

- Set global lang attribute according to the subsite language.
  [mathias.leimgruber]

- Use browser layer for all viewlets in this package.
  [mbaechtold]

- Replace miss-used definition list markup by section/header markup in languageselector.
  [mathias.leimgruber]


2.0.0 (2015-12-04)
------------------
