@@ -4,7 +4,9 @@ Changelog
 2.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make subsitelogoviewlet only search for a subsite logo when the navigation
+  root actually is a subsite.
+  [raphael-s]
 
 
 2.4.1 (2016-11-07)
